increased z-index of 'x' icon to fix inability to click due to overlapping div

--- a/public/client/less/search/filters.less
+++ b/public/client/less/search/filters.less
@@ -244,6 +244,8 @@
                 }
             }
             .remove{
+                position: relative;
+                z-index: 10;
                 float:right;
                 display:inline-block;
                 color:#333;
